--- a/Projeto_4_pca.ipynb
+++ b/Projeto_4_pca.ipynb
@@ -2809,11 +2809,37 @@
     "\n",
     "Para facilitar o entendimento posterior e termos um nome mais mnemônico que somente componente 1, 2; podemos criar \"nomes\" para os componentes de acordo com suas características. Isso vai ser útil quando fizermos análise de aglomerados mais à frente!\n",
     "\n",
-    "#componente 1 - praticidade, trabalho e economia\n",
-    "#componente 2 - qualidade de vida \n",
-    "#componente 3 - família\n",
-    "#componente 4 - amantes de carros velozes\n",
-    "#componente 5 - padrão de vida "
+    "componente 1 - praticidade, trabalho e economia\n",
+    "\n",
+    "componente 2 - qualidade de vida \n",
+    "\n",
+    "componente 3 - família\n",
+    "\n",
+    "componente 4 - amantes de carros velozes\n",
+    "\n",
+    "componente 5 - padrão de vida \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebbc9a67",
+   "metadata": {},
+   "source": [
+    "Each row in the df_composition_components dataframe represents a main component, and each value in the columns represents the weight (or coefficient) assigned to a specific characteristic in that main component. These weights indicate the relative contribution of each characteristic to that component.\n",
+    "\n",
+    "So, although all the original features are present in the df_composicao_componentes dataframe, they are now represented in terms of how they contribute to the first five principal components, which are the new dimensions of the feature space after the dimensionality reduction carried out by PCA.\n",
+    "\n",
+    "To make it easier to understand later and to have a more mnemonic name than just component 1, 2; we can create \"names\" for the components according to their characteristics. This will come in handy when we do cluster analysis later on!\n",
+    "\n",
+    "component 1 - functionality, work-oriented and cost-efficient\n",
+    "\n",
+    "component 2 - quality of life \n",
+    "\n",
+    "component 3 - family\n",
+    "\n",
+    "component 4 - lovers of fast cars\n",
+    "\n",
+    "component 5 - lifestyle\n"
    ]
   },
   {
@@ -2840,6 +2866,7 @@
     }
    ],
    "source": [
+    "#aplicar o PCA a todo o dataframe\n",
     "componentes_principais_microvan = pca.transform(df_microvan.drop(colunas_demograficas, axis=1))\n",
     "componentes_principais_microvan"
    ]
